# hangman

./: Cargo.toml  LICENSE  README.md
assets/: easy-words.txt  full-word-list.txt  hard-words.txt  medium-words.txt
src/: main.rs  screen.rs
src/hangman/: hangman.rs  mod.rs
src/hangman/core/: button.rs  gallow.rs  mod.rs  person.rs  screen.rs
